<?xml version="1.0" encoding="UTF-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/my_info_txt1"

            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/my_info_surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/my_info_txt2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/my_info_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/my_info_txt3"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/my_info_aem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/my_info_txt4"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/my_info_department"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/my_info_txt5"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/my_info_semester"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

    <TableRow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/my_info_txt6"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/my_info_program"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/my_info_txt7"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/my_info_resistration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

</TableLayout>