<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_info_txt1"
                android:layout_marginLeft="3dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/teacher_info_surname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Small Text"
                android:padding="2dip"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_info_txt2"
                android:layout_marginLeft="3dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/teacher_info_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dip"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:text="@string/teacher_info_txt2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/teacher_info_role"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dip"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:text="@string/teacher_info_txt3"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/teacher_info_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoLink="phone"
                android:textColorLink="@color/textview_colors"
                android:padding="2dip"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:text="@string/teacher_info_txt4"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/teacher_info_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoLink="email"
                android:textColorLink="@color/textview_colors"
                android:text="Small Text"
                android:padding="2dip"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>        
    </TableLayout>

    <Button
        android:id="@+id/btn_close"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:layout_gravity="center"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
         />

</LinearLayout>